crates/link-parser/tests/snapshots/parse_patterns__a_broken_pattern_does_not_eat_the_next_arm.snap
---
source: crates/link-parser/tests/parse_patterns.rs
expression: "parse_source_allowing_errors(\"fn f(x: Int) -> Int:\\n    match x:\\n        *: 0\\n        1: 1\\n\")"
---
Module @0..60
  Fn `f` @0..60
    params
      Param `x` @5..11
        type: Path `Int` @8..11
    ret: Path `Int` @16..19
    body: Block @25..60
      tail: Match @25..60
        scrutinee: Path `x` @31..32
        arms
          Arm @42..46
            pattern: Error @42..43
            body: Int 0 @45..46
          Arm @55..59
            pattern: Int 1 @55..56
            body: Int 1 @58..59
--- diagnostics ---
LK0106 @42..43 expected a pattern, found `*`
