crates/link-parser/tests/snapshots/parse_patterns__a_mutable_binding_pattern.snap
---
source: crates/link-parser/tests/parse_patterns.rs
expression: "parse_body(r#\"fn f(x: Int) -> Int:\n    match x:\n        mut n: n\n\"#)"
---
Block @25..51
  tail: Match @25..51
    scrutinee: Path `x` @31..32
    arms
      Arm @42..50
        pattern: Binding `n` mut @42..47
        body: Path `n` @49..50
--- diagnostics ---
(none)
