crates/link-parser/tests/snapshots/parse_patterns__an_empty_argument_list_in_a_pattern_is_a_variant.snap
---
source: crates/link-parser/tests/parse_patterns.rs
expression: "parse_body(r#\"fn f(x: Int) -> Int:\n    match x:\n        Doc(): 0\n\"#)"
---
Block @25..50
  tail: Match @25..50
    scrutinee: Path `x` @31..32
    arms
      Arm @42..50
        pattern: Variant `Doc` @42..47
        body: Int 0 @49..50
--- diagnostics ---
(none)
