crates/link-parser/tests/snapshots/parse_patterns__for_loop_patterns.snap
---
source: crates/link-parser/tests/parse_patterns.rs
expression: "parse_body(r#\"fn f(pairs: &Array[(Int, Int)]):\n    for (a, b) in pairs:\n        println(a)\n\"#)"
---
Block @37..77
  tail: For @37..77
    pattern: Tuple @41..47
      Binding `a` @42..43
      Binding `b` @45..46
    iter: Path `pairs` @51..56
    body: Block @66..76
      tail: Call @66..76
        callee: Path `println` @66..73
        args
          Path `a` @74..75
--- diagnostics ---
(none)
