crates/link-parser/tests/snapshots/parse_patterns__or_patterns.snap
---
source: crates/link-parser/tests/parse_patterns.rs
expression: "parse_body(r#\"fn f(n: Int) -> String:\n    match n:\n        0 | 1 | 2: \"small\"\n        Symbol(',') | Symbol(';'): \"punctuation\"\n        _: \"large\"\n\"#)"
---
Block @28..131
  tail: Match @28..131
    scrutinee: Path `n` @34..35
    arms
      Arm @45..63
        pattern: Or @45..54
          Int 0 @45..46
          Int 1 @49..50
          Int 2 @53..54
        body: Str "small" @56..63
      Arm @72..112
        pattern: Or @72..97
          Variant `Symbol` @72..83
            Char ',' @79..82
          Variant `Symbol` @86..97
            Char ';' @93..96
        body: Str "punctuation" @99..112
      Arm @121..131
        pattern: Wildcard @121..122
        body: Str "large" @124..131
--- diagnostics ---
(none)
