crates/link-parser/tests/snapshots/parse_patterns__struct_patterns.snap
---
source: crates/link-parser/tests/parse_patterns.rs
expression: "parse_body(r#\"fn f(p: &Point) -> String:\n    match p:\n        Point(x: 0, y: 0): \"origin\"\n        Point(x: 0, y: y): \"on the Y axis\"\n        Doc(title: t, body: _): t\n\"#)"
---
Block @31..152
  tail: Match @31..152
    scrutinee: Path `p` @37..38
    arms
      Arm @48..75
        pattern: StructPat `Point` @48..65
          fields
            FieldPat `x` @54..58
              pattern: Int 0 @57..58
            FieldPat `y` @60..64
              pattern: Int 0 @63..64
        body: Str "origin" @67..75
      Arm @84..118
        pattern: StructPat `Point` @84..101
          fields
            FieldPat `x` @90..94
              pattern: Int 0 @93..94
            FieldPat `y` @96..100
              pattern: Binding `y` @99..100
        body: Str "on the Y axis" @103..118
      Arm @127..152
        pattern: StructPat `Doc` @127..149
          fields
            FieldPat `title` @131..139
              pattern: Binding `t` @138..139
            FieldPat `body` @141..148
              pattern: Wildcard @147..148
        body: Path `t` @151..152
--- diagnostics ---
(none)
